--- a/src/tnt/editor/PropertiesDialog.form
+++ b/src/tnt/editor/PropertiesDialog.form
@@ -104,7 +104,7 @@
         <Property name="text" type="java.lang.String" value="jLabelError"/>
       </Properties>
     </Component>
-    <Component class="editor.LanguageComboBox" name="sourceLanguageComboBox">
+    <Component class="tnt.editor.LanguageComboBox" name="sourceLanguageComboBox">
       <Properties>
         <Property name="maximumRowCount" type="int" value="30"/>
       </Properties>
@@ -112,7 +112,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sourceLanguageComboBoxActionPerformed"/>
       </Events>
     </Component>
-    <Component class="editor.LanguageComboBox" name="targetLanguageComboBox">
+    <Component class="tnt.editor.LanguageComboBox" name="targetLanguageComboBox">
       <Properties>
         <Property name="maximumRowCount" type="int" value="30"/>
       </Properties>
