--- a/src/tnt/editor/SpecialCharacterDialog.form
+++ b/src/tnt/editor/SpecialCharacterDialog.form
@@ -190,7 +190,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="editor.CharacterTable" name="characterTableRecent">
+        <Component class="tnt.editor.CharacterTable" name="characterTableRecent">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
@@ -221,7 +221,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="editor.CharacterTable" name="characterTableCommon">
+        <Component class="tnt.editor.CharacterTable" name="characterTableCommon">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
