added locate in file browser menu

--- a/src/tnt/editor/MainForm.form
+++ b/src/tnt/editor/MainForm.form
@@ -64,6 +64,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemLocateInFileBrowser">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Locate in file browser"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemLocateInFileBrowserActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemProperties">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Project properties"/>
