changed label to "Custom/recent characters" in SpecialCharacterDialog

--- a/src/tnt/editor/SpecialCharacterDialog.form
+++ b/src/tnt/editor/SpecialCharacterDialog.form
@@ -125,7 +125,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Custom characters"/>
+        <Property name="text" type="java.lang.String" value="Custom/recent characters"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonAdd">
