--- a/src/tnt/editor/SegmentView.form
+++ b/src/tnt/editor/SegmentView.form
@@ -66,6 +66,7 @@
                 <Property name="editable" type="boolean" value="false"/>
               </Properties>
               <Events>
+                <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="markupViewSourceCaretUpdate"/>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="markupViewSourceFocusGained"/>
               </Events>
               <AuxValues>
