--- a/src/tnt/editor/FileView.form
+++ b/src/tnt/editor/FileView.form
@@ -21,42 +21,16 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" max="32767" attributes="0"/>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jTextFieldSearchText" pref="516" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButtonSearchNext" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jCheckBoxMatchCase" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabelCurrentMatchIndex" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="jScrollPane1" pref="800" max="32767" attributes="0"/>
+          <Component id="searchBar1" alignment="1" pref="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <Component id="searchBar1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jTextFieldSearchText" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButtonSearchNext" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="jButton2" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="jCheckBoxMatchCase" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabelCurrentMatchIndex" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <Component id="jScrollPane1" pref="503" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="491" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,34 +48,7 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JCheckBox" name="jCheckBoxMatchCase">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Aa"/>
-        <Property name="toolTipText" type="java.lang.String" value="Match case"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldSearchText">
-    </Component>
-    <Component class="javax.swing.JButton" name="jButtonSearchNext">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Next"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSearchNextActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Previous"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabelCurrentMatchIndex">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="0 of 0"/>
-      </Properties>
+    <Component class="tnt.editor.search.SearchBar" name="searchBar1">
     </Component>
   </SubComponents>
 </Form>
