--- a/src/tnt/editor/search/SearchBar.form
+++ b/src/tnt/editor/search/SearchBar.form
@@ -76,6 +76,9 @@
         <Property name="text" type="java.lang.String" value="Aa"/>
         <Property name="toolTipText" type="java.lang.String" value="Match case"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBoxMatchCaseActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelCurrentMatchIndex">
       <Properties>
