--- a/src/tnt/editor/search/SearchBar.form
+++ b/src/tnt/editor/search/SearchBar.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroupColumn">
+    </Component>
+  </NonVisualComponents>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -18,8 +22,14 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jTextFieldSearchText" pref="534" max="32767" attributes="0"/>
+              <Component id="jTextFieldSearchText" pref="466" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="jRadioButtonSource" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jRadioButtonTarget" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jRadioButtonBoth" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButtonSearchPrevious" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButtonSearchNext" min="-2" max="-2" attributes="0"/>
@@ -33,19 +43,17 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jTextFieldSearchText" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
-                      <Component id="jButtonSearchNext" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="jButtonSearchPrevious" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="jCheckBoxMatchCase" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabelCurrentMatchIndex" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jButtonSearchNext" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                  <Component id="jButtonSearchPrevious" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                  <Component id="jCheckBoxMatchCase" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelCurrentMatchIndex" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jRadioButtonBoth" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jRadioButtonTarget" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jRadioButtonSource" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldSearchText" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -83,6 +91,31 @@
     <Component class="javax.swing.JLabel" name="jLabelCurrentMatchIndex">
       <Properties>
         <Property name="text" type="java.lang.String" value="0 of 0"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="jRadioButtonSource">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroupColumn"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Source"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="jRadioButtonTarget">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroupColumn"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Target"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="jRadioButtonBoth">
+      <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="buttonGroupColumn"/>
+        </Property>
+        <Property name="selected" type="boolean" value="true"/>
+        <Property name="text" type="java.lang.String" value="Both"/>
       </Properties>
     </Component>
   </SubComponents>
