--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
@@ -503,7 +502,7 @@ th {
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
 	color: #606c71
