--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 html {
 	font-family: sans-serif;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%
 }
 
 body {
 	margin: 0
 }
 
-section { display: block }
+section {
+	display: block
+}
 
 a {
 	background-color: transparent
