--- a/style.css
+++ b/style.css
@@ -134,10 +134,10 @@ a {
 
 .main-content code {
 	padding: 2px 4px;
-	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	font-size: 0.9rem;
 	color: #567482;
 	background-color: #f3f6fa;
+	border: solid 1px #dce6f0;
 	border-radius: 0.3rem
 }
 
@@ -145,7 +145,6 @@ a {
 	padding: 0.8rem;
 	margin-top: 0;
 	margin-bottom: 1rem;
-	font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	color: #567482;
 	word-wrap: normal;
 	background-color: #f3f6fa;
