--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a {
 	margin-bottom: 1em
 }
 
-.main-content code {
+code {
 	padding: 2px 4px;
 	font-size: 0.9rem;
 	color: #567482;
@@ -129,7 +129,7 @@ a {
 	border-radius: 0.3rem
 }
 
-.main-content pre {
+pre {
 	padding: 0.8rem;
 	margin-top: 0;
 	margin-bottom: 1rem;
@@ -138,20 +138,14 @@ a {
 	background-color: #f3f6fa;
 	border: solid 1px #dce6f0;
 	border-radius: 0.3rem
+	overflow: auto;
+	font-size: 0.9rem;
+	line-height: 1.45;
+	-webkit-overflow-scrolling: touch
 }
 
 .main-content .highlight {
 	margin-bottom: 1rem
-}
-
-.main-content .highlight pre,
-.main-content pre {
-	padding: 0.8rem;
-	overflow: auto;
-	font-size: 0.9rem;
-	line-height: 1.45;
-	border-radius: 0.3rem;
-	-webkit-overflow-scrolling: touch
 }
 
 .main-content ul,
