added autosave functionality

--- a/src/tnt/editor/MainForm.form
+++ b/src/tnt/editor/MainForm.form
@@ -232,7 +232,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jLabelProgress" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jLabelSaveStatus" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -240,7 +241,10 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="jLabelProgress" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabelProgress" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabelSaveStatus" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
           </Group>
         </DimensionLayout>
@@ -249,6 +253,11 @@
         <Component class="javax.swing.JLabel" name="jLabelProgress">
           <Properties>
             <Property name="text" type="java.lang.String" value="jLabelProgress"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabelSaveStatus">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jLabelSaveStatus"/>
           </Properties>
         </Component>
       </SubComponents>
