--- a/src/main/java/tnt/editor/MainForm.form
+++ b/src/main/java/tnt/editor/MainForm.form
@@ -64,14 +64,29 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemExportTable">
+            <Menu class="javax.swing.JMenu" name="jMenuExportTable">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Export as table"/>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportTableActionPerformed"/>
-              </Events>
-            </MenuItem>
+              <SubComponents>
+                <MenuItem class="javax.swing.JMenuItem" name="jMenuItemExportTableBoth">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Source and target"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportTableBothActionPerformed"/>
+                  </Events>
+                </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="jMenuItemExportTableTarget">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Only target"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportTableTargetActionPerformed"/>
+                  </Events>
+                </MenuItem>
+              </SubComponents>
+            </Menu>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemLocateInFileBrowser">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Locate in file browser"/>
