--- a/src/main/java/tnt/editor/ExportCompletedPanel.form
+++ b/src/main/java/tnt/editor/ExportCompletedPanel.form
@@ -30,7 +30,7 @@
                               <Component id="jButtonLocateInBrowser" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="297" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="183" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -83,7 +83,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonOpenFile">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Open file"/>
+        <Property name="text" type="java.lang.String" value="Open file and close dialog"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonOpenFileActionPerformed"/>
