--- a/src/main/java/tnt/editor/search/SearchBar.form
+++ b/src/main/java/tnt/editor/search/SearchBar.form
@@ -62,6 +62,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="jTextFieldSearchText">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldSearchTextKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonSearchPrevious">
       <Properties>
