--- a/src/main/java/tnt/editor/FileView.form
+++ b/src/main/java/tnt/editor/FileView.form
@@ -49,6 +49,9 @@
       </SubComponents>
     </Container>
     <Component class="tnt.editor.search.SearchBar" name="searchBar1">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
