--- a/src/main/java/tnt/editor/SegmentView.form
+++ b/src/main/java/tnt/editor/SegmentView.form
@@ -130,6 +130,7 @@
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new tnt.editor.EditableMarkupView(this)"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="17"/>
               </AuxValues>
             </Component>
           </SubComponents>
