--- a/src/main/java/tnt/editor/FileView.form
+++ b/src/main/java/tnt/editor/FileView.form
@@ -21,27 +21,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" pref="800" max="32767" attributes="0"/>
+          <Component id="segmentView1" alignment="0" pref="800" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" alignment="1" pref="543" max="32767" attributes="0"/>
+          <Component id="segmentView1" alignment="0" pref="543" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-
-      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-      <SubComponents>
-        <Container class="javax.swing.JPanel" name="jPanelItems">
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
-            <Property name="axis" type="int" value="3"/>
-          </Layout>
-        </Container>
-      </SubComponents>
-    </Container>
+    <Component class="tnt.editor.SegmentView" name="segmentView1">
+    </Component>
   </SubComponents>
 </Form>
